# blixt-wallet

./: .envrc  .eslintrc.js  .gitignore  .gitlab-ci.yml  .gitmodules  .prettierignore  .prettierrc  .prettierrc.js  .yarnrc  .yarnrc.yml  App.tsx  Blixt.sh  Dockerfile  LICENSE  PRIVACY.md  README.md  app.json  assetsTransformer.js  babel.config.js  build-android-aar.md  build-ios-framework.md  build-steps-android-windows.md  build-tor  build.sh  build_aar.sh  bun.lockb  devenv.nix  devenv.yaml  fetch_libraries.sh  flake.nix  flake.nix.bak  index.js  index.ts  index.web.js  jest.config.js  jestSetup.js  metro.config.js  package-lock.json  package.json  react-native.config.js  (+5 more)
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: android.yml  build.yml  build_android.yml  reproducible_build.yml  test.yml
.zed/: settings.json
__tests__/: App-test.tsx
__tests__/__snapshots__/: App-test.tsx.snap
android/: build.gradle  gradle.properties  gradle_TEMPLATE.properties  hermesc.cmd  settings.gradle
android/app/: BUCK  build.gradle  debug.keystore  google-services.json  proguard-rules.pro
android/app/src/main/jni/: CMakeLists.txt  JvmStore.h  LndJNI.cpp  OnLoad.cpp
android/blixtlnd/: .project  build.gradle
build_aar/: Dockerfile  action.yml  build_aar.sh
contrib/: log  log-full  log-lnd  log-lndmobile  log-scheduler
contrib/service-image/: README.md  convert.sh  generate-code.sh
electrobun/: README.md  electrobun.config.ts  llms.txt  package.json  tsconfig.json
electrobun/scripts/: prebuild.ts
ios/: Podfile
ios/BlixtWallet/: AppDelegate.m  AppDelegate.mm  AppDelegate.swift  BlixtWallet.entitlements  Info.plist  LaunchScreen.storyboard  NativeSpeedloaderModuleProvider.h  NativeSpeedloaderModuleProvider.mm
ios/BlixtWallet.xcodeproj/: project.pbxproj
ios/BlixtWallet.xcworkspace/: contents.xcworkspacedata
ios/BlixtWalletTests/: BlixtWalletTests.m
ios/LndMobile/: BlixtTools.h  BlixtTools.swift  BlixtToolsBridge.m  BlixtToolsTurbo.mm  Lnd.swift  LndMobile.m  LndMobile.swift  LndMobileScheduledSync.m  (+10 more)
locales/: ar.json  cs.json  da.json  de.json  en.json  es.json  fa.json  fi.json  fr.json  hi.json  hr.json  it.json  ja.json  ko.json  nl.json  no.json  pl.json  pt.json  ro.json  ru.json  sv.json  sw.json  sw_KE.json  tlh.json  vi.json  zh-Hant.json  zh.json
macos/: BlixtWallet-Bridging-Header.h  BlixtWallet.entitlements  Podfile
mocks/: Camera.tsx  react-native-build-config.ts  react-native-camera.tsx  react-native-document-picker.ts  react-native-fingerprint-scanner.ts  react-native-fs.ts  react-native-keychain.ts  react-native-permissions.ts  react-native-push-notification.ts  react-native-securerandom.ts  react-native-sqlite-storage.ts  react-native-vision-camera.ts
patches/: react-native@0.82.1.patch
proto/: lightning.proto  rpc.proto
scripts/: fetch-lnd-if-needed.js
speedloader-turbomodule/: NativeSpeedloader.cpp  NativeSpeedloader.h  blixtlog.h  log.h
src/: App.tsx  Blur.tsx  DEV_InitApp.tsx  DEV_InitApp_BlixtLnd.tsx  Init.tsx  InitLightning.tsx  Loader.tsx  Main.tsx  Welcome.tsx  react-native-clipboard.d.ts  store.ts  types.d.ts
tests/: App-test.tsx  utils.ts  utils.tsx
web/: index.html  main.ts  webpack.config.js
web-hacks/: react-native-dialogs.js  react-native-permission.js  react-native-push-notification.js  react-native-sqlite-storage.js
(+788 files in other folders)
